labs/proyect/webpage-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webpage-deploy
  namespace: public
  labels:
    app: webpage
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webpage
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
  template:
    metadata:
      labels:
        app: webpage
    spec:
      containers:
      - name: webapp-container
        image: cachac/kubelabs_webapp:1.1.7
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "50Mi"
            cpu: "10m"
          limits:
            memory: "100Mi"
            cpu: "100m"
        volumeMounts:
        - name: config-volume
          mountPath: /usr/share/nginx/html/config.js
          subPath: config.js
      volumes:
      - name: config-volume
        configMap:
          name: webpage-config
