labs/proyect/websocket-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websocket-deploy
  namespace: public
  labels:
    app: websocket
spec:
  replicas: 1
  selector:
    matchLabels:
      app: websocket
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: websocket
    spec:
      containers:
      - name: websocket-container
        image: cachac/kubelabs_websocket:1.0.6
        ports:
        - containerPort: 3001
        resources:
          requests:
            memory: "100Mi"
            cpu: "100m"
          limits:
            memory: "200Mi"
            cpu: "250m"
        readinessProbe:
          httpGet:
            path: /healthcheck
            port: 3081
          initialDelaySeconds: 10
          periodSeconds: 30
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /healthcheck
            port: 3081
          initialDelaySeconds: 10
          periodSeconds: 30
          timeoutSeconds: 5
