labs/proyect/private-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: private-api-svc
  namespace: private
spec:
  selector:
    app: private-api
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
