labs/proyect/public-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: public-api-svc
  namespace: public
spec:
  selector:
    app: public-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
