labs/proyect/webpage-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webpage-svc
  namespace: public
spec:
  selector:
    app: webpage
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
