labs/proyect/websocket-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: websocket-svc
  namespace: public
spec:
  selector:
    app: websocket
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
