labs/proyect/webpage-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webpage-ingress
  namespace: public
  annotations:
    # Añade aquí anotaciones específicas de tu Ingress Controller si son necesarias
spec:
  rules:
  - host: fercanales.kubelabs.dev # Tu subdominio y TLD .dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webpage-svc
            port:
              number: 80
